# shapes

./: .gitignore  Makefile.am  VERSION  configure.ac  version_test.sh
config/: oldtool
devdoc/: TriangleLinprog.nb  binarysizehistory.txt  geometry.nb  intersection.nb
doc/: .gitignore  CubicSplines.nb  Makefile.am  Surfaces.nb  geometry.nb  index.html  macros  shapes.css  sidepaths.nb  threeroots.nb  transformPlaneEquation.m
doc/bitmaps/: Makefile
doc/extensions/: index.html
doc/formats/: README
doc/lang/: Makefile  book.sxml  chap-kernbind.sxml  chap-kerntypes.sxml  chap-lexer.sxml  chap-notation.sxml  chap-syntax.sxml  chap-tolerances.sxml  coretypes.xml  html-bindings.xsl  html.xsl  index.html  index.shtml  index.sxml  lang-book.sxml  lang.xsl  menutext  operators.sxml  types_html.xsl
doc/man/: Makefile  html-postproc.l  html.xsl  index.html  man-postproc.l  man.xsl  mini.sxml  shapes.1  single-breaker.l  tool-interface.sxml
doc/notation/: html.xsl  man.xsl
doc/output/: .gitignore  Makefile  Makefile.am  README
doc/parts/: .gitignore  Makefile  Makefile.in  Makefile.incl.in  README
doc/postproc/: html.l  man.l
doc/ssi/: Makefile  main.cc  ssiscanner.cc  ssiscanner.h  ssiyylex.ll
doc/styles/: README
doc/tools/: Makefile.am
doc/tutorial/: Makefile  chap-basics.sxml  chap-hello.sxml  tutorial.depend  tutorial.sxml
edit/emacs/: shapes-mode.el
examples/: .gitignore  Makefile
examples/applications/: Makefile  README  bookprefs.shext  double-pendulum.shape  doughnut.shape  droo.drool  droo.shape  erikw.shape  examplesprefs.shext  ghfrontpic.shape  ingela0.drool  ingela0.shape  ingela1.drool  ingela1.shape  jeroen.drool  jeroen.shape  johan_lay.shape  johans.shape  logo.shape  measuretext.drool  measuretext.shape  pinhole.shape  pipefigprefs.drext  pipefigprefs.shext  robot.drool  robot.shape  rtlogo_bent.drool  rtlogo_bent.shape  rtlogo_bent2.drool  rtlogo_bent2.shape  rtlogo_blackonwhite.drool  rtlogo_blackonwhite.shape  rtlogo_elements.drext  rtlogo_elements.shext  rtlogo_left.drool  rtlogo_left_nobg.drool  rtlogo_right.drool  rtlogo_right_nobg.drool  rtlogo_right_nobg.shape  rtlogo_round_1_2.drool  (+17 more)
examples/doc/: .gitignore  README  blockdraw-blocks.shape  blockdraw-con-points.shape  blockdraw-connections-connect.shape  blockdraw-connections-intermediate.shape  blockdraw-connections-primitive.shape  blockdraw-labels.shape  blockdraw-layout.shape  blockdraw-tutorial-conpoint.shape  blockdraw-tutorial-hello.shape  blockdraw-tutorial-labels.shape  blockdraw-tutorial-layout.shape  blockdraw-tutorial-relative.shape  blockdraw-tutorial-tut-prefs.shext  bondgraph-bonds.shape  bondgraph-junctions.shape  bondgraph-labels.shape  bondgraph-termbonds.shape  schur.shape  structure-oneliner.shape  structure-text.shape  structure-typical.shape  tex-quotes.shape  tutorial-approximator.shape  tutorial-bezier-connected.shape  tutorial-graphics-params.shape  tutorial-intersection.shape  tutorial-maximizer.shape  tutorial-one-segment.shape  tutorial-path-painting.shape  tutorial-slider-use.shape  tutorial-subpath-intersection.shape  tutorial-transforms.shape  tutorial-view.shape
examples/features/: Makefile  README  annotations.drool  annotations.shape  approximators.drool  approximators.shape  approximators3d.drool  approximators3d.shape  arclength.drool  arclength.shape  ascii-fallbacks.shape  asymmetric-notation.shape  basic3d.drool  basic3d.shape  bendtext.drool  bleed.shape  (+112 more)
m4/: bison.m4  compare.m4  flex.m4  gsl.m4  nansignal.m4  opt.m4  saxon.m4  zlib.m4
resources/: Makefile.am
resources/extensions/: Shapes-Prelude  arrowheads.drext  arrowheads.shext  basic-layout.shext  blockdraw.shext  blockdraw_wfo.drext  blockdraw_wfo.shext  bondgraph.drext  bondgraph.shext  braces.drext  braces.shext  centering-X.shext  centering.drext  centering.shext  circle.shext  circuitparts.drext  circuitparts.shext  conssupport.drext  conssupport.shext  golden.shext  linkpaths.drext  linkpaths.shext  metapostarrow.shext  newline.shext  no-utf-8.shext  numeric-constants.shext  pathmapping.drext  pathmapping.shext  revolutionbody.shext  shapes2D.drext  shapes2D.shext  shapes3D.shext  shiftoff.drext  shiftoff.shext
resources/version-converters/: 0.3.8  0.4.2  0.4.3  extmp  fixtmp
source/: .gitignore  FontMetrics_decls.h  Makefile  Makefile.am  MetaPDF_Ast_decls.h  MetaPDF_Computation_decls.h  MetaPDF_Concrete_decls.h  MetaPDF_Exceptions_decls.h  MetaPDF_Helpers_decls.h  MetaPDF_Kernel_decls.h  MetaPDF_Lang_decls.h  SHAPES-VERSION-GEN  Shapes_Ast_decls.h  Shapes_Computation_decls.h  Shapes_Concrete_decls.h  Shapes_Exceptions_decls.h  Shapes_Helpers_decls.h  Shapes_Kernel_decls.h  Shapes_Lang_decls.h  SimplePDF_decls.h  VERSION  afmscanner.cc  afmscanner.h  afmyylex.l  afmyylex.ll  angleselect.cc  angleselect.h  annotations.cc  annotations.h  ast.cc  ast.h  astclass.cc  astclass.h  astexpr.cc  astexpr.h  astexpr_arithmetic.cc  astexpr_relational.cc  astexpr_unary.cc  astexprs.h  astflow.cc  (+233 more)
source/edscripts/: edtmp  edutf8  exdroolsource  exnamespaces  exshapessource  extmp  fixdups  fixnamespaces  fixtmp  rmdupesc.l  toutf8.l
source/exscripts/: GPL-head  comment-c.ex  comment-hash.ex  comment-shapes.ex  comment-xml.ex  copyright-hendeby  copyright-tidefelt  exconfig  exshapessource  extmp  extrailingspaces  fixcopy-c  fixcopy-hash  fixcopy-shapes  fixcopy-xml  fixnamespaces  fixshapessource  fixtmp  instrument-xml.ex
source/testers/: Makefile  fontmeter.cc  opt1  opt2  simplex.cc  test.cc  testbezier.cc
source/testers/blastest/: Makefile  main.cc
test/: Makefile  Makefile.am  expretty
test/graphics/: .gitignore  Makefile  Makefile.am  approximate2d.correct  approximate2d.drool  approximate2d.shape  bad.correct  bad.drool  bad.shape  dyn-thunk.shape  hello.correct  hello.drool  hello.shape  mypackage.sty  testTEMPLATE  texlabel.shape
test/graphics/tmp/: .gitignore  README
test/text/: .gitignore  Makefile  Makefile.am  bad.correct  bad.drool  bad.shape  dynamic.correct  dynamic.shape  scopes.correct  scopes.drool  scopes.shape  testTEMPLATE
tools/: Makefile.am
(+286 files in other folders)
