ACLOCAL_AMFLAGS = -I m4

SUBDIRS			= source doc resources
CLEANFILES		= configure-stamp build-stamp

dist_noinst_DATA        = m4/lib-ld.m4 m4/lib-prefix.m4 m4/lib-link.m4 \
                          m4/iconv.m4 m4/zlib.m4 \
                          m4/bison.m4 m4/flex.m4 \
                          m4/gsl.m4 m4/opt.m4