dist_pkgdata_DATA =  extensions/arrowheads.shext extensions/blockdraw_wfo.shext \
                     extensions/bondgraph.shext extensions/braces.shext \
                     extensions/centering.shext extensions/circle.shext \
                     extensions/circuitparts.shext extensions/conssupport.shext \
                     extensions/linkpaths.shext extensions/newline.shext \
                     extensions/no-utf-8.shext extensions/pathmapping.shext \
                     extensions/shapes2D.shext extensions/shapes3D.shext \
                     extensions/shiftoff.shext