dist_pkgdata_DATA =  extensions/arrowheads.shext extensions/blockdraw_wfo.shext \
                     extensions/bondgraph.shext extensions/braces.shext \
                     extensions/centering.shext extensions/circle.shext \
                     extensions/circuitparts.shext extensions/conssupport.shext \
                     extensions/linkpaths.shext extensions/newline.shext \
                     extensions/no-utf-8.shext extensions/pathmapping.shext \
                     extensions/shapes2D.shext extensions/shapes3D.shext \
                     extensions/shiftoff.shext \
                     fontmetrics/Courier-Bold.afm fontmetrics/Courier-BoldOblique.afm \
                     fontmetrics/Courier-Oblique.afm fontmetrics/Courier.afm \
                     fontmetrics/Helvetica-Bold.afm fontmetrics/Helvetica-BoldOblique.afm \
                     fontmetrics/Helvetica-Oblique.afm fontmetrics/Helvetica.afm \
                     fontmetrics/MacRoman.enc fontmetrics/Symbol.afm \
                     fontmetrics/Times-Bold.afm fontmetrics/Times-BoldItalic.afm \
                     fontmetrics/Times-Italic.afm fontmetrics/Times-Roman.afm \
                     fontmetrics/ZapfDingbats.afm fontmetrics/glyphlist.txt