# This file is part of Shapes.
#
# Shapes is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# any later version.
#
# Shapes is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Shapes.  If not, see <http://www.gnu.org/licenses/>.
#
# Copyright 2008 Gustaf Hendeby

extensionsdir = ${pkgdatadir}/extensions
fontmetricsdir = ${pkgdatadir}/fontmetrics

dist_extensions_DATA =  extensions/arrowheads.shext extensions/blockdraw_wfo.shext \
                     extensions/bondgraph.shext extensions/braces.shext \
                     extensions/centering.shext extensions/circle.shext \
                     extensions/circuitparts.shext extensions/conssupport.shext \
                     extensions/linkpaths.shext extensions/newline.shext \
                     extensions/no-utf-8.shext extensions/pathmapping.shext \
                     extensions/shapes2D.shext extensions/shapes3D.shext \
                     extensions/shiftoff.shext extensions/revolutionbody.shext
dist_fontmetrics_DATA = fontmetrics/Courier-Bold.afm fontmetrics/Courier-BoldOblique.afm \
                     fontmetrics/Courier-Oblique.afm fontmetrics/Courier.afm \
                     fontmetrics/Helvetica-Bold.afm fontmetrics/Helvetica-BoldOblique.afm \
                     fontmetrics/Helvetica-Oblique.afm fontmetrics/Helvetica.afm \
                     fontmetrics/MacRoman.enc fontmetrics/Symbol.afm \
                     fontmetrics/Times-Bold.afm fontmetrics/Times-BoldItalic.afm \
                     fontmetrics/Times-Italic.afm fontmetrics/Times-Roman.afm \
                     fontmetrics/ZapfDingbats.afm fontmetrics/glyphlist.txt
